[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Enemies/Tank.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/tank_blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/Sounds/engine_heavy_average_loop.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[node name="Tank" type="PathFollow2D" groups=["enemy"]]
loop = false
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
stream = ExtResource( 4 )
volume_db = 0.1
autoplay = true
max_distance = 1000.0
bus = "Ambience"

[node name="ImpactEffects" type="Node" parent="KinematicBody2D"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = -24.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.160784, 0.156863, 0.156863, 1 )
tint_progress = Color( 0.219608, 0.988235, 0.0117647, 1 )
nine_patch_stretch = true

[node name="Impact" type="Position2D" parent="."]
position = Vector2( -15, -15 )
